apps/base/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf

  template:
    metadata:
      labels:
        app: audiobookshelf

    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000

      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.36.0

          ports:
            - containerPort: 3005
              protocol: TCP

          resources:
            requests:
              cpu: "10m"
              memory: "200Mi"
            limits:
              cpu: "500m"
              memory: "1536Mi"

          volumeMounts:
            - mountPath: /config
              name: audiobookshelf-config
            - mountPath: /metadata
              name: audiobookshelf-metadata
            - mountPath: /audiobooks
              name: audiobookshelf-audiobooks
            - mountPath: /podcasts
              name: audiobookshelf-podcasts
            - mountPath: /ebooks
              name: audiobookshelf-ebooks
            - mountPath: /comics
              name: audiobookshelf-comics
            - mountPath: /videos
              name: audiobookshelf-videos

      restartPolicy: Always

      volumes:
        - name: audiobookshelf-config
          persistentVolumeClaim:
            claimName: audiobookshelf-config
        - name: audiobookshelf-metadata
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata
        - name: audiobookshelf-audiobooks
          persistentVolumeClaim:
            claimName: audiobookshelf-audiobooks
        - name: audiobookshelf-podcasts
          persistentVolumeClaim:
            claimName: audiobookshelf-podcasts
        - name: audiobookshelf-ebooks
          persistentVolumeClaim:
            claimName: audiobookshelf-ebooks
        - name: audiobookshelf-comics
          persistentVolumeClaim:
            claimName: audiobookshelf-comics
        - name: audiobookshelf-videos
          persistentVolumeClaim:
            claimName: audiobookshelf-videos
